--- a/.eslintrc
+++ b/.eslintrc
@@ -9,38 +9,60 @@
 		"modules": true
 	},
 	"rules": {
-		"no-bitwise": 2,
-		"no-else-return": 2,
-		"no-eq-null": 2,
-		"no-extra-parens": 0,
-		"no-floating-decimal": 2,
-		"no-inner-declarations": [2, "both"],
-		"no-lonely-if": 2,
-		"no-multiple-empty-lines": [2, {"max": 3}],
-		"no-self-compare": 2,
+		"quotes": 0,
+		"no-console": 0,
+		"no-debugger": 1,
+		"no-var": 1,
+		"semi": [
+			1,
+			"always"
+		],
+		"no-trailing-spaces": 0,
+		"eol-last": 0,
 		"no-underscore-dangle": 0,
-		"no-use-before-define": 0,
-		"no-unused-expressions": 0,
-		"no-void": 2,
-		"brace-style": [2, "1tbs"],
-		"camelcase": [1, {"properties": "never"}],
-		"consistent-return": 0,
-		"comma-style": [2, "last"],
-		"complexity": [1, 12],
-		"func-names": 0,
-		"guard-for-in": 2,
-		"indent": [2],
-		"max-len": [0, 120, 4],
-		"new-cap": [2, {"newIsCap": true, "capIsNew": false}],
-		"quotes": [2, "single"],
-		"keyword-spacing": [2, {"before": true, "after": true}],
-		"space-before-blocks": [2, "always"],
-		"array-bracket-spacing": [2, "never"],
-		"space-in-parens": [2, "never"],
-		"strict": [0],
-		"valid-jsdoc": 2,
-		"wrap-iife": [2, "any"],
-		"yoda": [1, "never"]
+		"no-alert": 0,
+		"no-lone-blocks": 0,
+		"jsx-quotes": 1,
+		"react/display-name": [
+			1,
+			{
+				"ignoreTranspilerName": false
+			}
+		],
+		"react/forbid-prop-types": [
+			1,
+			{
+				"forbid": [
+					"any"
+				]
+			}
+		],
+		"react/jsx-boolean-value": 0,
+		"react/jsx-closing-bracket-location": 0,
+		"react/jsx-curly-spacing": 1,
+		"react/jsx-indent-props": 0,
+		"react/jsx-key": 1,
+		"react/jsx-max-props-per-line": 0,
+		"react/jsx-no-bind": 0,
+		"react/jsx-no-duplicate-props": 1,
+		"react/jsx-no-literals": 0,
+		"react/jsx-no-undef": 1,
+		"react/jsx-pascal-case": 1,
+		"react/jsx-sort-prop-types": 0,
+		"react/jsx-sort-props": 0,
+		"react/jsx-uses-react": 1,
+		"react/jsx-uses-vars": 1,
+		"react/no-danger": 1,
+		"react/no-did-mount-set-state": 1,
+		"react/no-did-update-set-state": 1,
+		"react/no-direct-mutation-state": 1,
+		"react/no-set-state": 0,
+		"react/no-unknown-property": 1,
+		"react/prefer-es6-class": 1,
+		"react/prop-types": 0,
+		"react/react-in-jsx-scope": 1,
+		"react/self-closing-comp": 1,
+		"react/sort-comp": 1
 	},
 	"plugins": [
 		"react"
