--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "react-spinkits",
-    "version": "1.1.2",
-    "description": "A react port of SpinKit",
+    "version": "1.3.0",
+    "description": "Great spinners as a react component.",
     "repository": {
         "type": "git",
         "url": "https://github.com/dotamir/react-SpinKit.git"
